--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,56 @@
 :root {
-  --background: #ffffff;
+  --font: 'Merriweather', serif;
+  --button-font: "Sofia Sansi", sans-serif; /* "El Messiri", sans-serif /'Sofia Sans', sans-serif /'Caveat', cursive*/
+  --card-font: "Jaini", system-ui;
+  --button-color: #ca7e58;
+  --selected-color: rgba(218, 210, 205, 1);
+  --white-color: #ffffff;
   --foreground: #171717;
+  background: #0f0e0e;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 body {
-  color: var(--foreground);
+  font-family: 'Merriweather', serif;
+  margin: 0;
+
+  /* color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
+  background-image: url(/bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-a {
+ a {
   color: inherit;
   text-decoration: none;
 }
-
+/*
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
