--- a/components/ui/GameCard/GameCard.module.css
+++ b/components/ui/GameCard/GameCard.module.css
@@ -46,6 +46,13 @@
     margin-left: -16px;
 }
 
+.auth-button {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0 10px;
+    padding: 0;
+  }
+
 .text {
     color: var(--white-color);
     text-shadow: 0px 4px 10px  rgba(235, 90, 0, 0.5);
