--- a/components/ui/AuthForm/AuthForm.module.css
+++ b/components/ui/AuthForm/AuthForm.module.css
@@ -31,7 +31,16 @@
     border: none;
     border-bottom: 1px solid white; 
     background: none;
+    color: var(--white-color);
     
+  }
+
+  .input::placeholder{
+    color: rgba(255, 212, 189, 1);
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
   }
   
   .input:focus {
@@ -40,10 +49,33 @@
   }
   
   .button:hover {
-    background-color: #0056b3;
+    background-color: var(--selected-color);
   }
   
   .button:active {
     transform: scale(0.98);
   }
+  .title {
+    color: var(--white-color);
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 32px;
+    align-self: center;
+    margin-bottom: 10px;
+  }
   
+  .subButton {
+    color: var(--white-color);
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 28px;
+    width: 312px;
+    height: 45px;
+    background-color: rgba(21, 19, 19, 0.2);
+    text-align: center;
+    justify-content: center;
+    /* padding: 0 5px; */
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 4px 4px 0 rgba(255, 255, 255, 0.25);
+  }
