--- a/components/ui/GameCard/GameCard.module.css
+++ b/components/ui/GameCard/GameCard.module.css
@@ -58,3 +58,9 @@
     text-shadow: 0px 4px 10px  rgba(235, 90, 0, 0.5);
 
 }
+.ili {
+    color: var(--white-color);
+    font-family: var(--font);
+    font-weight: 400;
+    font-size: 22px;
+}
