--- a/components/ui/Modal/Modal.module.css
+++ b/components/ui/Modal/Modal.module.css
@@ -23,10 +23,10 @@
     justify-content: space-between;
   }
   
-  .close-button {
+  /* .close-button {
     background: none;
     border: none;
     font-size: 20px;
     
-  }
+  } */
   
