--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --selected-color: rgba(218, 210, 205, 1);
   --white-color: #ffffff;
   --foreground: #171717;
-  background: #0f0e0e;
+  background: #11100F;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -35,8 +35,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 * {
