--- a/components/ui/ShopCard/ShopCard.module.css
+++ b/components/ui/ShopCard/ShopCard.module.css
@@ -50,3 +50,28 @@
     color: rgba(155, 0, 0, 1);
     text-decoration: line-through;
 }
+@media (max-width: 768px) {
+    .shop-card {
+        width: 280px;
+        height: 280px;
+        padding: 0;
+        margin: 0;
+    }
+    .shop-card-img {
+        width: 250px;
+        height: 150px;
+        padding: 17px 0;
+    }
+
+    .name {
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .collection-name {
+        font-size: 32px;
+        font-weight: 400;
+        text-shadow: 0px 4px 4px rgba(255, 0, 0, 0.5);
+
+    }
+}
