--- a/app/home/contacts/ContactPage.module.css
+++ b/app/home/contacts/ContactPage.module.css
@@ -16,15 +16,19 @@
 }
 
 .contactInfo {
-  background-color: rgba(0, 0, 0, 0.05);
-  border: 2px solid #ca7e58;
+
+  /* border: 2px solid #ca7e58; */
   border-radius: 12px;
   padding: 20px 25px;
   margin-bottom: 40px;
-  box-shadow: 0 4px 10px rgba(202, 126, 88, 0.3);
   color: #ffffff;
   font-size: 18px;
   line-height: 1.6;
+
+    box-shadow: 0px 4px 4px 0px rgba(255, 255, 255, 0.25);
+    /* text-align: center;
+    align-content: center; */
+    background-color: rgba(21, 19, 19, 1);
 }
 
 .contactInfo p {
