--- a/components/ui/Navigation/Navigation.module.css
+++ b/components/ui/Navigation/Navigation.module.css
@@ -145,12 +145,10 @@
     flex-direction: column;
     position: fixed;
     top: 100px;
-    left: 0;
     width: 100vw;
     background: rgba(39, 37, 37, 0.4);
     backdrop-filter: blur(8px);
-    /* padding-top: 20px; */
-    padding-bottom: 20px;
+    padding: 20px 0;
     gap: 10px;
     z-index: 15;
     overflow-y: auto;
@@ -161,7 +159,7 @@
   .nav-links.open > a {
     font-size: 24px;
     color: #ffffff;
-    padding-left: 24px;
+    padding-left: 0;
     text-decoration: none;
     text-shadow:
       -0.1px -0.1px 0 #ca7e58,
@@ -169,7 +167,6 @@
       -0.1px 0.1px 0 #ca7e58,
       0.1px 0.1px 0 #ca7e58;
   }
-
 }
 
 @media screen and (max-width: 480px) {
