--- a/components/ui/Cart/CartItem.module.css
+++ b/components/ui/Cart/CartItem.module.css
@@ -17,3 +17,10 @@ margin-bottom: 15px;
     padding: 0 20px;
     font-size: 20px;
 }
+
+@media (max-width: 300px) {
+    .productImage {
+        display: none;
+
+    }
+}
