--- a/components/ui/ShopCard/ShopCard.module.css
+++ b/components/ui/ShopCard/ShopCard.module.css
@@ -50,7 +50,12 @@
     color: rgba(155, 0, 0, 1);
     text-decoration: line-through;
 }
-@media (max-width: 768px) {
+
+/* @media (max-width: 1100px) {
+
+} */
+
+@media (max-width: 1100px) {
     .shop-card {
         width: 280px;
         height: 280px;
@@ -74,4 +79,42 @@
         text-shadow: 0px 4px 4px rgba(255, 0, 0, 0.5);
 
     }
+}
+
+@media (max-width: 400px) {
+    .shop-card {
+        width: 200px;
+        height: 200px;
+        padding: 0;
+        margin: 0;
+    }
+    .shop-card-img {
+        width: 150px;
+        height: 90px;
+        padding: 15px 0 10px 0;
+    }
+
+    .name {
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .collection-name {
+        font-size: 20px;
+    }
+    
+    .prise-container {
+        margin-top: 10px;
+        height: 20px;
+    }
+
+    .new-prise {
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+    .cart-add {
+        width: 25px;
+    }
+
 }
