--- a/app/home/admin/admin.module.css
+++ b/app/home/admin/admin.module.css
@@ -1,6 +1,19 @@
 .formContainer {
-display: flex;
-flex-direction: row;
-gap: 30px;
-padding: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px 50px;
+}
+
+.formsContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.formContainer p {
+    color: white;
+    font-size: 30px;
+    padding: 30px 0 10px 10px;
 }
